# fold_db

./: .cursorrules  .gitignore  .node_pids  AGENTS.md  ARCHITECTURAL_SIMPLIFICATION_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.local  HOOKS_README.md  INGESTION_EXAMPLE.md  INGESTION_MODULE_PLAN.md  INGESTION_README.md  INGESTION_UPDATES.md  INTEGRATED_NODE_README.md  LICENSE-MIT  README.md  README_CLI.md  README_SDK.md  REF_ATOM_UUID_MANAGEMENT.md  RUST_PACKAGE_GUIDE.md  SANDBOX.md  SANDBOX_API.md  SCHEMA_API_ARCHITECTURE_OPTIONS.md  SCHEMA_API_CONSOLIDATION_PLAN.md  SCHEMA_API_ELIMINATION_PLAN.md  SCHEMA_DEDUPING_GUIDE.md  SCHEMA_HASHER_SUMMARY.md  SCHEMA_INPUT_GUIDE.md  SOCIAL_MEDIA_INGESTION_IMPLEMENTATION_PLAN.md  SOCIAL_MEDIA_INGESTION_PROPOSAL.md  UUID_GENERATION_FIXES_SUMMARY.md  agent.md  all_filenames.txt  check_schemas.py  clippy_suppress.toml  datafold_revised_implementation_plan.md  datafold_sample_data_design.md  datafold_simplified_approach.md  datafold_tcp_http_compatibility.md  datafold_ui_implementation_plan.md  (+60 more)
.github/: FUNDING.yml
datafold_sdk/: Cargo.toml  README.md  test_sdk.sh
datafold_sdk/examples/: basic_usage.rs  container_management.rs  schema_operations.rs
datafold_sdk/src/: client.rs  container.rs  error.rs  isolation.rs  lib.rs  mutation_builder.rs  network_manager.rs  network_mock.rs  network_utils.rs  permissions.rs  query_builder.rs  schema.rs  schema_builder.rs  schema_discovery.rs  types.rs
datafold_sdk/tests/: README.md  integration_tests.rs  real_integration_tests.rs  sdk_tests.rs
fold_client/: .gitignore  APP_DEVELOPMENT.md  Cargo.toml  DOCKER.md  INTEGRATION.md  README.md  README_UI.md  SANDBOX.md  babel.config.js  package-lock.json  package.json  webpack.config.js
fold_client/electron/: main.js  preload.js
fold_client/examples/: run_sandboxed_app.rs  sandboxed_app.rs  simple_app.rs
fold_client/examples/sample_social_app/: Cargo.toml  Dockerfile  README.md
fold_client/src/: App.js  auth.rs  index.html  index.js  lib.rs  main.rs
fold_client/src/assets/: styles.css
fold_client/src/components/: Sidebar.js
fold_client/src/docker/: mod.rs
fold_client/src/ipc/: client.rs  mod.rs  server.rs
fold_client/src/node/: client.rs  mod.rs
fold_client/src/pages/: Dashboard.js  Logs.js  NodeConnection.js  PrivateKeyManager.js  SandboxedApps.js  Settings.js
fold_client/src/process/: mod.rs
fold_client/src/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
fold_client/tests/: auth_tests.rs  client_tests.rs  ipc_tests.rs  mod.rs  node_tests.rs  process_tests.rs  sandbox_tests.rs
fold_node/: Cargo.toml  complex_output.txt  logic_test_output.txt  samples_output.txt
fold_node/available_schemas/: BlogPost.json  Inventory.json  README.md
fold_node/config/: openrouter_config.json
fold_node/data/schemas/: source_schema.json  target_schema.json  test_schema.json
fold_node/examples/: auto_transform_demo.rs  complex_transform_dsl.rs  product_catalog_range_demo.rs  range_field_filtering_example.rs  transform_dsl_samples.rs  transform_logic_test.rs  transform_registry_demo.rs
fold_node/src/: error.rs  lib.rs  testing.rs  transform.rs  web_logger.rs
fold_node/src/atom/: atom_ref.rs  atom_ref_behavior.rs  atom_ref_collection.rs  atom_ref_range.rs  atom_ref_tests.rs  atom_ref_types.rs  mod.rs
fold_node/src/datafold_node/: README_TCP_SERVER.md  config.rs  db.rs  fold_routes.rs  http_helpers.rs  http_server.rs  loader.rs  log_routes.rs  mod.rs  network_routes.rs  node.rs  permissions.rs  query_routes.rs  sample_manager.rs  schema_routes.rs  system_routes.rs  tcp_command_router.rs  tcp_connections.rs  tcp_protocol.rs  tcp_server.rs  tests.rs  transform_queue.rs  unified_response.rs
fold_node/src/db_operations/: atom_operations.rs  core.rs  error_utils.rs  metadata_operations.rs  mod.rs  orchestrator_operations.rs  schema_operations.rs  tests.rs  transform_operations.rs  utility_operations.rs
fold_node/src/error_handling/: iterator_utils.rs  mod.rs  parser_utils.rs  regex_utils.rs  string_utils.rs
fold_node/src/fees/: payment_calculator.rs  payment_config.rs  payment_manager.rs
fold_node/src/fold/: error.rs  manager.rs  mod.rs
fold_node/src/fold_db_core/: atom_manager.rs  collection_manager.rs  context.rs  field_manager.rs  init.rs  mod.rs  mutation.rs  query.rs  transform_management.rs  transform_manager.rs  transform_orchestrator.rs
fold_node/src/ingestion/: config.rs  core.rs  error.rs  mod.rs  mutation_generator.rs  openrouter_service.rs  routes.rs  schema_stripper.rs  simple_service.rs
fold_node/src/logging/: config.rs  features.rs  mod.rs
fold_node/src/network/: config.rs  connections.rs  core.rs  discovery.rs  forward.rs  mod.rs  schema_protocol.rs  schema_service.rs
fold_node/test_data_b7014b9e_6864_4ea7_9355_bb1a64d1a857/: db
fold_node/tests/: README.md  aref_bug_reproduction_test.rs  aref_generation_bug_test.rs  aref_persistence_bug_test.rs  aref_persistence_fix_test.rs  atom_manager_tests.rs  atom_mod_tests.rs  atom_ref_tests.rs  atom_tests.rs  datafold_http_server_tests.rs  datafold_node_bin_tests.rs  datafold_node_tests.rs  db_module_tests.rs  db_operations_tests.rs  fees_lightning_mock_tests.rs  fees_lightning_types_tests.rs  fees_payment_calculator_tests.rs  fees_payment_config_tests.rs  fees_payment_manager_tests.rs  fees_types_config_tests.rs  folddb_tests.rs  http_server_module_tests.rs  interpreter_tests.rs  loader_module_tests.rs  manager_tests.rs  mod.rs  network_discovery_tests.rs  network_routes_tests.rs  network_schema_service_tests.rs  network_tests.rs  node_config_tests.rs  node_mutation_tests.rs  permission_manager_tests.rs  permission_tests.rs  permissions_impl_tests.rs  permissions_tests.rs  query_routes_tests.rs  range_field_atom_uuid_tests.rs  range_field_tests.rs  range_schema_operation_tests.rs  (+22 more)
social_app/: Cargo.toml  README.md  register_and_run.sh  register_app.rs  run_social_app.sh
social_app/src/: main.rs
social_app_example/: .gitignore  Cargo.toml  README.md
social_app_example/src/: social_app_tcp.rs
tools/protocol-validation/: Cargo.toml  README.md  validate.sh
(+1726 files in other folders)
