[package]
name = "fold_db"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "fold_node",
]

[features]
default = ["mock"]  # Enable mock feature by default
test-utils = []  # Feature flag for test utilities
simulate-peers = []  # Feature flag for simulating peer discovery
mock = []  # Feature flag for mock network implementation

[dependencies]
fold_node = { path = "./fold_node" }

# Cryptography
ring = "0.16.20"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
thiserror = "1.0"
futures = "0.3"
rand = "0.8"
tempfile = "3.8"
clap = { version = "4.4", features = ["derive"] }
# P2P Networking
libp2p = { version = "0.53", features = [
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "request-response",
    "tokio"
]}

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
fold_node = { path = "./fold_node", features = ["test-utils"] }  # Enable test-utils for tests
reqwest = { version = "0.11", features = ["json"] }

# Commented out missing example
# [[example]]
# name = "social_app_tcp"
# path = "examples/social_app_tcp.rs"

# Commented out missing example
# [[example]]
# name = "social_app_two_nodes"
# path = "examples/social_app_two_nodes.rs"

# Commented out missing example
# [[example]]
# name = "sandboxed_app_two_nodes"
# path = "examples/sandboxed_app_two_nodes/main.rs"


[lib]
name = "fold_db"
path = "src/lib.rs"
