[package]
name = "datafold"
version = "0.1.0"
edition = "2021"
authors = ["Tom Tang <tom@datafold.ai>"]
description = "A distributed data platform with schema-based storage and AI-powered ingestion"
documentation = "https://docs.rs/datafold"
homepage = "https://github.com/yourusername/datafold"
repository = "https://github.com/yourusername/datafold"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["database", "distributed", "schema", "ingestion", "ai"]
categories = ["database", "data-structures", "network-programming"]

[features]
default = ["mock"]  # Enable mock feature by default
test-utils = []  # Feature flag for test utilities
simulate-peers = []  # Feature flag for simulating peer discovery
mock = []  # Feature flag for mock network implementation

[dependencies]
# Utilities
dirs = "5.0"

# Cryptography
ring = "0.16.20"
base64 = "0.21.0"
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
argon2 = { version = "0.5", features = ["password-hash"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
# AES-GCM encryption for encryption at rest
aes-gcm = "0.10"
# BLAKE3 for fast, secure key derivation
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
once_cell = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
rand = "0.8"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# For future Secret Service integration
# secret-service = "3.0"

[target.'cfg(target_os = "macos")'.dependencies]
# For future Keychain Services integration
# security-framework = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
# For future Credential Manager integration
# winapi = { version = "0.3", features = ["wincred"] }

[dev-dependencies]
tempfile = "3.8"
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
pest = "2.7"
pest_derive = "2.7"
log = "0.4"
env_logger = "0.10"
# Enhanced logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono", "ansi"] }
tracing-appender = "0.2"
colored = "2.0"
toml = "0.8"
# P2P Networking
libp2p = { version = "0.53", features = [
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "request-response",
    "tokio"
]}

# HTTP Server
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"

# HTTP Client for OpenRouter API
reqwest = { version = "0.11", features = ["json"] }

# Additional dependencies for encryption at rest
lru = "0.12"
bytes = "1.5"
flate2 = "1.0"

# Additional test dependencies
tokio-test = "0.4"

[lib]
name = "datafold"
path = "src/lib.rs"

# Note: Binary paths based on actual file structure
# These binaries will be available when installing the package
[[bin]]
name = "datafold_cli"
path = "src/bin/datafold_cli.rs"

[[bin]]
name = "datafold_http_server"
path = "src/bin/datafold_http_server.rs"

[[bin]]
name = "datafold_node"
path = "src/bin/datafold_node.rs"

