[package]
name = "datafold_sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with DataFold nodes"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

# We'll need to implement our own error handling without depending on the main crate

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
serde_json = "1.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "container_management"
path = "examples/container_management.rs"
