[package]
name = "fold_client"
version = "0.1.0"
edition = "2021"
description = "A client for DataFold that provides sandboxed access to the node API"
authors = ["DataFold Team"]

[dependencies]
rand_07 = { package = "rand", version = "0.7" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1.0"
rand = "0.8"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.2", features = ["derive"] }
dirs = "5.0"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.26"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winnt", "jobapi2", "winbase", "handleapi", "processthreadsapi", "securitybaseapi", "winerror"] }

[lib]
name = "fold_client"
path = "src/lib.rs"

[[bin]]
name = "fold_client"
path = "src/main.rs"
