[package]
name = "fold_client"
version = "0.1.0"
edition = "2021"
description = "Client for DataFold that provides sandboxed access to the node API"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "1.0"
rand_07 = { package = "rand", version = "0.7" }
base64 = "0.13"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.5"
