[package]
name = "fold_client"
version = "0.1.0"
edition = "2021"
description = "A client for DataFold that provides Docker-sandboxed access to the node API"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
base64 = "0.13"
ed25519-dalek = "1.0"
rand_07 = { package = "rand", version = "0.7" }
bollard = "0.14"
futures = "0.3"
async-trait = "0.1"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.3"
