[package]
name = "fold_node"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock"]  # Enable mock feature by default
test-utils = []  # Feature flag for test utilities
simulate-peers = []  # Feature flag for simulating peer discovery
mock = []  # Feature flag for mock network implementation

[dependencies]
# Utilities
dirs = "5.0"

# Cryptography
ring = "0.16.20"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
thiserror = "1.0"
futures = "0.3"
rand = "0.8"
tempfile = "3.8"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
# P2P Networking
libp2p = { version = "0.53", features = [
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "request-response",
    "tokio"
]}

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[lib]
name = "fold_node"
path = "src/lib.rs"

[[bin]]
name = "datafold_node"
path = "src/bin/datafold_node.rs"

[[bin]]
name = "datafold_cli"
path = "src/bin/datafold_cli.rs"

[[example]]
name = "auto_transform_demo"
path = "examples/auto_transform_demo.rs"