[package]
name = "fold_node"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock"]  # Enable mock feature by default
test-utils = []  # Feature flag for test utilities
simulate-peers = []  # Feature flag for simulating peer discovery
mock = []  # Feature flag for mock network implementation

[dependencies]
# Utilities
dirs = "5.0"

# Cryptography
ring = "0.16.20"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
once_cell = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
rand = "0.8"
tempfile = "3.8"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
log = "0.4"
env_logger = "0.10"
# P2P Networking
libp2p = { version = "0.53", features = [
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "request-response",
    "tokio"
]}

# HTTP Server
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[lib]
name = "fold_node"
path = "src/lib.rs"

[[bin]]
name = "datafold_node"
path = "src/bin/datafold_node.rs"

[[bin]]
name = "datafold_cli"
path = "src/bin/datafold_cli.rs"

[[bin]]
name = "datafold_http_server"
path = "src/bin/datafold_http_server.rs"

[[example]]
name = "auto_transform_demo"
path = "examples/auto_transform_demo.rs"

[[example]]
name = "transform_dsl_samples"
path = "examples/transform_dsl_samples.rs"

[[example]]
name = "transform_logic_test"
path = "examples/transform_logic_test.rs"

[[example]]
name = "complex_transform_dsl"
path = "examples/complex_transform_dsl.rs"

[patch.crates-io]
env_logger = { path = "../vendor/env_logger" }
