[package]
name = "social_app"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
fold_client = { path = "../fold_client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
thiserror = "1.0"

[[bin]]
name = "social_app"
path = "src/main.rs"

[[bin]]
name = "register_app"
path = "register_app.rs"
