[package]
name = "social_app_example"
version = "0.1.0"
edition = "2021"

[dependencies]
fold_db = { path = ".." }
datafold_sdk = { path = "../datafold_sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[[bin]]
name = "social_app_tcp"
path = "src/social_app_tcp.rs"
