[package]
name = "sample_social_app"
version = "0.1.0"
edition = "2021"
description = "A sample social app for FoldClient"

[dependencies]
fold_client = { path = "../.." }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "fs"] }
